--- a/index.html
+++ b/index.html
@@ -322,13 +322,8 @@
                 <strong>NTPU Student Union Legal Compilation</strong>
             </p>
             <p class="mb-0">
-                <i class="fas fa-copyright me-1"></i>
-                National Taipei University Student Union
-            </p>
-            <p class="mb-0">
-                <a href="https://ntpusu.org">
-					https://ntpusu.org
-				</a>
+                <a href="https://github.com/jenhuang-tw/ntpusu-law" style="color: white;"><i class="fas fa-github me-1"></i>
+                Open Source</a>, by <a href="https://ntpusu.org" style="color: white;">National Taipei University Student Union</a>
             </p>
         </div>
     </footer>
